--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic/angular": "^5.5.2",
     "angular-svg-icon": "^11.2.0",
     "d3": "^6.7.0",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
