--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "@angular/router": "~11.2.0",
     "@capacitor/android": "^2.4.7",
     "@capacitor/core": "2.4.7",
+    "@ionic-native/nfc": "^5.32.1",
     "@ionic/angular": "^5.5.2",
     "angular-svg-icon": "^11.2.0",
+    "angular-svg-round-progressbar": "^6.0.1",
     "d3": "^6.7.0",
     "hammerjs": "^2.0.8",
+    "phonegap-nfc": "^1.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
