--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@capacitor/android": "^2.4.7",
     "@capacitor/core": "2.4.7",
     "@ionic/angular": "^5.5.2",
+    "@ionic/storage": "^3.0.4",
+    "@ionic/storage-angular": "^3.0.6",
     "angular-svg-icon": "^11.2.0",
     "d3": "^6.7.0",
     "hammerjs": "^2.0.8",
