--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
-    "@capacitor/android": "^2.4.7",
-    "@capacitor/core": "2.4.7",
+    "@capacitor/android": "^3.0.0-rc.3",
+    "@capacitor/core": "^3.0.0-rc.3",
     "@ionic-native/nfc": "^5.32.1",
     "@ionic/angular": "^5.5.2",
     "@ionic/storage": "^3.0.4",
     "@ionic/storage-angular": "^3.0.6",
     "angular-svg-icon": "^11.2.0",
+    "capacitor-ndef-intent": "github:NePheus/capacitor-ndef-intent",
     "cordova-plugin-device": "^2.0.3",
     "d3": "^6.7.0",
     "hammerjs": "^2.0.8",
@@ -44,7 +45,7 @@
     "@angular/compiler": "~11.2.0",
     "@angular/compiler-cli": "~11.2.0",
     "@angular/language-service": "~11.2.0",
-    "@capacitor/cli": "2.4.7",
+    "@capacitor/cli": "^3.0.0-rc.3",
     "@ionic/angular-toolkit": "^3.1.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
