--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@angular/router": "~11.2.0",
     "@capacitor/android": "^2.4.7",
     "@capacitor/core": "2.4.7",
+    "@ionic-native/nfc": "^5.33.0",
     "@ionic/angular": "^5.5.2",
     "@ionic/storage": "^3.0.4",
     "@ionic/storage-angular": "^3.0.6",
     "angular-svg-icon": "^11.2.0",
     "d3": "^6.7.0",
     "hammerjs": "^2.0.8",
+    "phonegap-nfc": "^1.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
