--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,6 +1,6 @@
 {
-  "appId": "io.ionic.starter",
-  "appName": "test-mobile",
+  "appId": "io.gpn.driver",
+  "appName": "Driver",
   "bundledWebRuntime": false,
   "npmClient": "npm",
   "webDir": "www",
