--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "@ionic/storage-angular": "^3.0.6",
     "angular-animations": "^0.11.0",
     "angular-svg-icon": "^12.0.0",
+    "c": "^1.1.1",
     "d3": "^7.0.1",
     "hammerjs": "^2.0.8",
+    "master": "^0.0.14",
     "plugin-sspush": "github:gunenkov/plugin-sspush",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
