--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "d3": "^7.0.1",
     "hammerjs": "^2.0.8",
     "master": "^0.0.14",
+    "phonegap-nfc": "^1.2.0",
     "plugin-sspush": "github:gunenkov/plugin-sspush",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
