--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -1,3 +1,4 @@
 {
-  "restUrl": "http://185.165.161.23:90"
+  "restUrl": "http://185.165.161.23:90",
+  "supportUrl": "https://tpmobs.koa.gazprom-neft.ru/mobile_api_operator"
 }
