--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -9,8 +9,5 @@
 			"androidScaleType": "CENTER_CROP"
 		}
 	},
-	"cordova": {},
-	"server": {
-		"url": "http://192.168.1.87:8100"
-	}
+	"cordova": {}
 }
