--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "c": "^1.1.1",
     "d3": "^7.0.1",
     "hammerjs": "^2.0.8",
+    "jsnetworkx": "^0.3.4",
     "master": "^0.0.14",
     "phonegap-nfc": "^1.2.0",
     "plugin-sspush": "github:gunenkov/plugin-sspush",
