--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,10 @@
     "importHelpers": true,
     "target": "es2015",
     "module": "es2020",
-    "lib": ["es2018", "dom"]
+    "lib": ["es2018", "dom"],
+    "paths": {
+      "jsnx": ["node_modules/jsnetworkx/jsnetworkx.js"]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
