--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@capacitor/android": "3.2.0",
     "@capacitor/app": "1.0.2",
     "@capacitor/core": "3.2.0",
+    "@capacitor/geolocation": "^1.3.1",
     "@capacitor/haptics": "1.0.2",
     "@capacitor/ios": "3.2.0",
     "@capacitor/keyboard": "1.0.2",
