caching + tracking + is over
Работа с координатами, передача координаты с мобилки.

Кэширование у пробосборного шкафа

Всплывашка при удалении от установки на любом экране задачи

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@capacitor/haptics": "1.0.2",
     "@capacitor/ios": "3.2.0",
     "@capacitor/keyboard": "1.0.2",
+    "@capacitor/network": "^1.0.7",
     "@capacitor/splash-screen": "^1.1.1",
     "@ionic-native/barcode-scanner": "^5.36.0",
     "@ionic-native/core": "^5.36.0",
