--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "graph:compile": "node ./scripts/graph-compile.js"
   },
   "private": true,
   "dependencies": {
